--- a/templates/form.html
+++ b/templates/form.html
@@ -8,8 +8,10 @@
 -->
 <html>
   <head>
-    <title>Grand Arena Championship Form</title>
+    <meta charset="utf-8" />
+    <title>GAC Planner</title>
     <link rel="stylesheet" href="/static/css/style.css" />
+    <script src="/static/js/main.js" type="module"></script>
   </head>
   <body>
     <div class="container">
@@ -19,8 +21,9 @@
           ☰
         </button>
         <div class="sidebar-content">
+          <h2>GAC Planner</h2>
           <!-- Presets -->
-          <div>
+          <div class="presets-buttons">
             <button
               type="button"
               id="savePresetsButton"
@@ -128,8 +131,5 @@
         </form>
       </div>
     </div>
-
-    <!-- Include JavaScript Files -->
-    <script src="/static/js/main.js" type="module"></script>
   </body>
 </html>
